# GameProgramming_Snippets

./: .gitignore  CMakeLists.txt  README.md
0_HelloWorld/: CMakeLists.txt  Game.cpp  Game.hpp  main.cpp
1_Basic2D/: CMakeLists.txt  Game.cpp  Game.hpp  Vector.hpp  main.cpp
2_GameObjects/: Actor.cpp  Actor.hpp  AnimSpriteComponent.cpp  AnimSpriteComponent.hpp  BGSpriteComponent.cpp  BGSpriteComponent.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Math.cpp  SDL_TextureLoader.hpp  Ship.cpp  Ship.hpp  SpriteComponent.cpp  SpriteComponent.hpp  Vector.hpp  main.cpp
Common/: Actor.cpp  Actor.hpp  CMakeLists.txt  Component.cpp  Component.hpp  Vector2D.cpp  Vector2D.hpp  iActor.hpp  iComponent.hpp  iGame.hpp
